# tpack-cli

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/GenesisSDK/: CMakeLists.txt
